<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>qJava</name>
    <description>Library providing connectivity between Java and kdb+.</description>

    <groupId>exxeleron</groupId>
    <artifactId>qJava</artifactId>

    <inceptionYear>2014</inceptionYear>

    <packaging>bundle</packaging>
    <version>2.3.2-SNAPSHOT</version>

    <organization>
        <name>exxeleron</name>
        <url>http://www.exxeleron.com</url>
    </organization>

    <url>${project.organization.url}</url>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/</url>
            <comments>
            Copyright (c) 2011-2015 Exxeleron GmbH
        </comments>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:ssh://git@github.com:exxeleron/qJava.git</connection>
        <developerConnection>scm:git:git@github.com:exxeleron/qJava.git</developerConnection>
        <url>https://github.com/exxeleron/qJava.git</url>
      <tag>qJava-2.0.0</tag>
  </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/exxeleron/qJava/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Jenkins</system>
        <url />
    </ciManagement>

    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>releases</name>
            <uniqueVersion>false</uniqueVersion>
            <url>http://lib.devnet.de/libs-release-local</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>snapshots</name>
            <uniqueVersion>false</uniqueVersion>
            <url>http://lib.devnet.de/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin-version}</version>
                <executions>
                    <execution>
                        <id>enforce-plugin-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requirePluginVersions>
                                    <message>Best Practice is to always define plugin versions!</message>
                                    <banLatest>true</banLatest>
                                    <banRelease>true</banRelease>
                                    <banSnapshots>true</banSnapshots>
                                    <phases>clean,deploy,site</phases>
                                    <additionalPlugins>
                                        <additionalPlugin>org.apache.maven.plugins:maven-eclipse-plugin</additionalPlugin>
                                        <additionalPlugin>org.apache.maven.plugins:maven-reactor-plugin</additionalPlugin>
                                    </additionalPlugins>
                                    <unCheckedPluginList>org.apache.maven.plugins:maven-enforcer-plugin,org.apache.maven.plugins:maven-idea-plugin</unCheckedPluginList>
                                </requirePluginVersions>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                        <phase>process-resources</phase>
                        <configuration>
                            <doctitle>qJava ${project.version} API</doctitle>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>dist-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>${maven-bundle-plugin-version}</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Export-Package>
                            com.exxeleron.qjava
                        </Export-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin-version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <optimize>${javac.optimize}</optimize>
                        <verbose>${javac.verbose}</verbose>
                        <debug>${javac.debug}</debug>
                        <encoding>${file.encoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin-version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${maven-build-helper-maven-plugin}</version>
                    <executions>
                        <execution>
                            <id>parse-version</id>
                            <goals>
                                <goal>parse-version</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin-version}</version>
                    <configuration>
                        <maxmemory>512m</maxmemory>
                    </configuration>
                    <executions>
                        <execution>
                            <id>package</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-scm-plugin</artifactId>
                    <version>${maven-scm-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven-install-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin-version}</version>
                    <configuration>
                        <excludes>
                            <exclude>**/*IntegrationTest.java</exclude>
                            <exclude>**/*IT.java</exclude>
                        </excludes>
                        <includes>
                            <include>**/*Test.java</include>
                            <include>**/Test*.java</include>
                        </includes>
                        <testFailureIgnore>true</testFailureIgnore>
                        <forkMode>once</forkMode>
                        <argLine>-Xmx1024m -XX:MaxPermSize=128M ${argLine}</argLine>
                        <aggregate>true</aggregate>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>${maven-archetype-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-reactor-plugin</artifactId>
                    <version>${maven-reactor-plugin-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-eclipse-plugin</artifactId>
                    <version>${maven-eclipse-plugin-version}</version>
                    <configuration>
                        <downloadSources>true</downloadSources>
                        <downloadJavadocs>true</downloadJavadocs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${maven-jacoco-maven-plugin-version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>ISO-8859-1</encoding>

        <java.version>1.5</java.version>
        <javac.debug>false</javac.debug>
        <javac.optimize>true</javac.optimize>
        <javac.verbose>false</javac.verbose>

        <!-- Plugin versions -->
        <maven-enforcer-plugin-version>1.2</maven-enforcer-plugin-version>
        <maven-clean-plugin-version>2.5</maven-clean-plugin-version>
        <maven-compiler-plugin-version>2.5.1</maven-compiler-plugin-version>
        <maven-source-plugin-version>2.2</maven-source-plugin-version>
        <maven-resources-plugin-version>2.6</maven-resources-plugin-version>
        <maven-javadoc-plugin-version>2.9</maven-javadoc-plugin-version>
        <maven-build-helper-maven-plugin>1.7</maven-build-helper-maven-plugin>
        <maven-scm-plugin-version>1.8</maven-scm-plugin-version>
        <maven-assembly-plugin-version>2.4</maven-assembly-plugin-version>
        <maven-release-plugin-version>2.3.2</maven-release-plugin-version>
        <maven-install-plugin-version>2.4</maven-install-plugin-version>
        <maven-deploy-plugin-version>2.7</maven-deploy-plugin-version>
        <maven-jar-plugin-version>2.4</maven-jar-plugin-version>
        <maven-dependency-plugin-version>2.5.1</maven-dependency-plugin-version>
        <maven-surefire-plugin-version>2.12.4</maven-surefire-plugin-version>
        <maven-archetype-plugin-version>2.2</maven-archetype-plugin-version>
        <maven-site-plugin-version>3.3</maven-site-plugin-version>
        <maven-reactor-plugin-version>1.0</maven-reactor-plugin-version>
        <maven-eclipse-plugin-version>2.9</maven-eclipse-plugin-version>
        <maven-jacoco-maven-plugin-version>0.7.6.201602180812</maven-jacoco-maven-plugin-version>
        <maven-bundle-plugin-version>2.4.0</maven-bundle-plugin-version>

        <!-- Version definitions -->
        <junit.version>4.11</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
    </dependencies>

</project>
